option(
    'tests', type : 'feature',
    value: 'enabled',
    description : 'Build tests'
)

option(
    'use-json', type : 'feature',
    value: 'enabled',
    description : 'LEDs JSON filepath'
)

option(
    'use-lamp-test', type : 'feature',
    value: 'disabled',
    description : 'LEDs lamp test configuration'
)

option(
    'monitor-operational-status', type : 'feature',
    value: 'disabled',
    description : 'Enable OperationalStatus monitor'
)
