option('tests', type: 'feature', value: 'enabled', description: 'Build tests')

option(
    'use-lamp-test',
    type: 'feature',
    value: 'enabled',
    description: 'LEDs lamp test configuration',
)

option(
    'monitor-operational-status',
    type: 'feature',
    value: 'disabled',
    description: 'Enable OperationalStatus monitor',
)

option(
    'persistent-led-asserted',
    type: 'feature',
    value: 'enabled',
    description: 'Persistent the asserted status of ledgroup',
)
