option(
    'tests', type : 'feature',
    description : 'Build tests'
)

option(
    'use-json', type : 'feature',
    value: 'enabled',
    description : 'LEDs JSON filepath'
)

option(
    'use-lamp-test', type : 'feature',
    value: 'disabled',
    description : 'LEDs lamp test configuration'
)

option(
    'monitor-operational-status', type : 'feature',
    value: 'disabled',
    description : 'Enable OperationalStatus monitor'
)

option(
    'max-led-failed-retry', type : 'integer', min : 0, max : 5,
    value : 3,
    description : 'Maximum set LED failed retries'
)
